Fixed background image on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@ header {
     margin-bottom: 20px;
     text-align: center;
     height: 50vh;
+    min-height: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
